package com.br.puc.carona.enums;

public enum Status {
    PENDENTE,
    APROVADO,
    REJEITADO,
    CANCELADO,
    FINALIZADO
}
