package com.br.puc.carona.enums;

public enum StatusCarona {
    AGENDADA,
    EM_ANDAMENTO,
    FINALIZADA,
    CANCELADA
}
