package com.br.puc.carona.enums;

public enum TipoUsuario {
    ADMINISTRADOR,
    ESTUDANTE
}