package com.br.puc.carona.model;

import java.time.LocalDate;

import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.OneToOne;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.NoArgsConstructor;
import lombok.experimental.SuperBuilder;

@Data
@SuperBuilder
@NoArgsConstructor
@AllArgsConstructor
@EqualsAndHashCode(callSuper = true)
@Entity
@Table(name = "estudante")
public class Estudante extends Usuario {
    
    @Column(nullable = false)
    private LocalDate dataDeNascimento;
    
    @Column(nullable = false, unique = true)
    private String matricula;
    
    @Column
    private Float avaliacaoMedia;
    
    @OneToOne(mappedBy = "estudante", cascade = CascadeType.ALL, fetch = FetchType.LAZY, orphanRemoval = true)
    private PerfilMotorista perfilMotorista;
    
    public boolean isMotorista() {
        return perfilMotorista != null;
    }
}
